--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "next": "9.4.4",
     "next-i18next": "^4.4.2",
     "next-redux-wrapper": "^6.0.0",
     "react": "16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
